<resources>
    <string name="app_name">SmolovCal</string>

    <!-- Drawer entries -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_my_workout">My workouts</string>
    <string name="navigation_drawer_my_current_workout">Current workout</string>
    <string name="navigation_drawer_my_account">My account</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Sign out</string>

    <!-- Login screen -->
    <string name="full_app_name">Smolov Calculator</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button_text_log_on">Sign in</string>
    <string name="remember_me_checkbox">Remember me</string>
    <string name="register">Register a new account</string>
    <string name="register_welcome">Register</string>

    <!-- Main screen -->
    <string name="main_exercise">Exercise</string>
    <string name="main_max">Max</string>
    <string name="main_smolov">Smolov</string>
    <string name="main_progress">Progress</string>

    <!-- Dialog New Workout -->
    <string name="dialog_junior">Smolov Jr</string>
    <string name="dialog_senior">Full smolov</string>
    <string name="new_workout">Choose a cycle!</string>
    <string name="dialog_info_text">Create a Smolov Jr cycle</string>
    <string name="dialog_info_full_text">Create a full Smolov cycle</string>
    <string name="new_exercise_text">Exercise?</string>
    <string name="new_one_rep_max">One Rep Max?</string>
    <string name="new_increment">Increment?</string>
    <string name="new_junior">Junior?</string>
    <string name="new_full">Full Smolov?</string>

    <!-- Register screen -->
    <string name="button_register">Register my account</string>
    <string name="name_hint">Name</string>

    <!-- Junior Cycle Screen -->
    <string name="junior_day">Day</string>
    <string name="junior_sets">Sets</string>
    <string name="junior_reps">Reps</string>
    <string name="junior_weight">Weight</string>
    <string name="junior_week_1">Week 1</string>
    <string name="junior_week_2">Week 2</string>
    <string name="junior_week_3">Week 3</string>
    <string name="junior_done">Done it</string>

    <!-- Days -->
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>

    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="day_4">Day 4</string>
    
    <!-- Full Cycle Screen -->
    <string name="phases_for_full">Cycle phases</string>
    <string name="phase_in_cycle">Phase In</string>
    <string name="base_cycle_cycle">Base Cycle</string>
    <string name="switching_phase_cycle">Switching Phase</string>
    <string name="intense_cycle_cycle">Intense Cycle</string>
    <string name="taper_week_cycle">Taper Week</string>

    <string name="full_week_1">Week 1</string>
    <string name="full_week_2">Week 2</string>
    <string name="full_week_3">Week 3</string>
    <string name="full_week_4">Week 4</string>
    <string name="full_week_5">Week 5</string>
    <string name="full_week_6">Week 6</string>
    <string name="full_week_7">Week 7</string>
    <string name="full_week_8">Week 8</string>
    <string name="full_week_9">Week 9</string>
    <string name="full_week_10">Week 10</string>
    <string name="full_week_11">Week 11</string>
    <string name="full_week_12">Week 12</string>
    <string name="full_week_13">Week 13</string>

    <string name="full_rest">Rest</string>
    <string name="full_max">Work up to a single max</string>
    <string name="full_rest_week">Focus on dynamic effort lifting, and try not to go over 50-60% over you new 1RM</string>
</resources>
