<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_workouts"
            android:icon="@drawable/ic_trophy"
            android:title="@string/navigation_drawer_my_workout" />
        <item
            android:id="@+id/nav_current_workout"
            android:icon="@drawable/ic_fitness_center_black_48px"
            android:title="@string/navigation_drawer_my_current_workout" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/navigation_drawer_my_account" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="Sign Out" />
    </group>

</menu>
