<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <TextView
        android:text="@string/new_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="64dp"
        android:textColor="@color/textColor" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp">

        <Button
            android:text="@string/new_junior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnJuniorCycle"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@android:color/white"
            android:textColor="@android:color/black" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <Button
            android:text="@string/new_full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnFullCycle"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@android:color/white"
            android:textColor="@android:color/black" />
    </android.support.v7.widget.CardView>
</LinearLayout>