<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reveal_view"
    android:background="@color/colorAccent">

    <TextView
        android:text="@string/dialog_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtCycle"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="6dp"
        android:textColor="@color/textColor" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/textColor"
        android:id="@+id/txtIPExercise">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edtExercise"
            android:layout_weight="1"
            android:hint="@string/new_exercise_text"
            android:inputType="text"
            android:textColor="@color/textColor"
            android:textColorHighlight="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textColorLink="@color/textColor" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:textColorHint="@color/textColor"
        android:id="@+id/txtIPOneRepMax">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtOneRepMax"
            android:layout_weight="1"
            android:hint="@string/new_one_rep_max"
            android:textColor="@color/textColor"
            android:textColorHighlight="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textColorLink="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/new_increment"
        android:textColorHint="@color/textColor"
        android:backgroundTint="@color/textColor"
        android:id="@+id/txtIPIncrement">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtIncrement"
            android:layout_weight="1" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <Button
            android:text="@android:string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/buttonTextColor"
            android:textColor="@color/colorDark"
            android:layout_marginRight="6dp" />

        <Button
            android:text="@string/button_text_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/colorDark"
            android:background="@color/buttonTextColor"
            android:layout_marginLeft="6dp" />
    </LinearLayout>

</LinearLayout>
